Add content to header section
Add header logo and header links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <div class="header"></div>
-    <div class="intro_section"></div>
+    <div class="intro_section">
+        <div class="logo">Header Logo</div>
+        <div class="right-links">
+            <ul>
+                <li><a>Link One</a></li>
+                <li><a>Link Two</a></li>
+                <li><a>Link Three</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="info_section"></div>
     <div class="quote_section"></div>
     <div class="signup_section"></div>
