Move header content to correct section.
Header content was contained inside intro section.
Fix: move header content to header section.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header"></div>
-    <div class="intro_section">
+    <div class="header">
         <div class="logo">Header Logo</div>
         <div class="right-links">
             <ul>
@@ -18,7 +17,12 @@
             </ul>
         </div>
     </div>
-    <div class="info_section"></div>
+    <div class="intro_section">
+        
+    </div>
+    <div class="info_section">
+        
+    </div>
     <div class="quote_section"></div>
     <div class="signup_section"></div>
     <div class="footer"></div>
