Add content to intro section
Add content tags and dummy content to intro section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
         </div>
     </div>
     <div class="intro_section">
-        
+        <div class="intro_left">
+            <div class="welcome">Welcome to my website</div>
+            <div class="hello">Hello ser. 
+                This is a big business website.
+                We do big business deals here. Lots of business.
+            </div>
+            <button class="button">Sign Up</button>
+        </div>
+        <img>
     </div>
     <div class="info_section">
         
