Add content to various sections
Add content to info, quote, signup, and footer sections

--- a/index.html
+++ b/index.html
@@ -29,10 +29,28 @@
         <img>
     </div>
     <div class="info_section">
-        
+        <div class="info_header">Big business information.</div>
+        <div class="info_images"></div>
     </div>
-    <div class="quote_section"></div>
-    <div class="signup_section"></div>
-    <div class="footer"></div>
+    <div class="quote_section">
+
+    </div>
+    <div class="signup_section">
+        <div class="quote">
+            Okay, I need price to go up. Like VERY SOON.
+            I can't take this anymore. I have over invested,
+            by a lot. It is what it is, but I need the price to
+            GO UP ALREADY. Can devs DO SOMETHING?
+        </div>
+        <div class="quote_person">Me, every day</div>
+    </div>
+    <div class="footer">
+        <div class="signup_box">
+            <div class="signup_description">Sign up to
+                big business today.
+            </div>
+        <button class="button">Sign Up</button>
+        </div>
+    </div>
 </body>
 </html>
