--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="footer">
-        
+        <div>Copyright The Odin Project 2021</div>
     </div>
 </body>
 </html>
