Add classes to stylesheet

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">Header Logo</div>
+        <div class="header_logo">Header Logo</div>
         <div class="right-links">
             <ul>
                 <li><a>Link One</a></li>
