Add styles to quote section

--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
         <div class="info_images"></div>
     </div>
     <div class="quote_section">
+      <div class="quote_box">
         <div class="quote">
             Okay, I need price to go up. Like VERY SOON.
             I can't take this anymore. I have over invested,
             by a lot. It is what it is, but I need the price to
             GO UP ALREADY. Can devs DO SOMETHING?
         </div>
-        <div class="quote_person">Me, every day</div>
+        <div class="quote_person">- Me, every day</div>
+    </div>
     </div>
     <div class="signup_section">
         <div class="signup_box">
