--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <button class="button">Sign Up</button>
         </div>
-        <img>
+        <div class="image"><img src="./images/business.jpg" alt="Business Man"></div>
     </div>
     <div class="info_section">
         <div class="info_header">Big business information.</div>
