Add content and modify info section layout
Add placeholder <div> images to info section
Modify info section layout

--- a/index.html
+++ b/index.html
@@ -31,7 +31,24 @@
     </div>
     <div class="info_section">
         <div class="info_header">Big business information.</div>
-        <div class="info_images"></div>
+        <div class="info_images">
+            <div class="image_chunk">
+                <div class="fake_image"></div>
+                <div class="description">Here's a nice description of a fake image.</div>
+            </div>
+            <div class="image_chunk">
+                <div class="fake_image"></div>
+                <div class="description">Here's a nice description of a fake image.</div>
+            </div>
+            <div class="image_chunk">
+                <div class="fake_image"></div>
+                <div class="description">Here's a nice description of a fake image.</div>
+            </div>
+            <div class="image_chunk">
+                <div class="fake_image"></div>
+                <div class="description">Here's a nice description of a fake image.</div>
+            </div>
+        </div>
     </div>
     <div class="quote_section">
       <div class="quote_box">
