Add styles to signup section
Modify layout and add styles to signup section

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
     </div>
     <div class="signup_section">
         <div class="signup_box">
-            <div class="signup_description">Sign up to
-                big business today.
+            <div class="signup_description"><span style="font-weight:bold">Sign up to
+                big business today.</span><br>
+                We will make you tons of money.
             </div>
         <button class="button">Sign Up</button>
         </div>
